# BrimView

./: .gitignore  Dockerfile  README.md  dev_getting_started.md  docker  launcher.spec  launcher_debug.spec  launcher_singlefile.spec  pyproject.toml
.github/workflows/: bundled_app.yml  docker_image.yml
BrimView-widgets/: pyproject.toml
BrimView-widgets/brimview_widgets/: __init__.py  bls_data_visualizer.py  bls_do_treatment.py  bls_file_input.py  bls_metadata.py  bls_spectrum.py  bls_statistics.py  bls_types.py  bls_zarr_info.py  browser_file_selectors.py  debug_report_widget.py  environment.py  local_file_selectors.py  logging.py  models.py  s3file_selector.py  sampledata_loader.py  utils.py  widgets.py
brimview_widgets/: __init__.py  bls_data_visualizer.py  bls_do_treatment.py  bls_file_input.py  bls_metadata.py  bls_spectrum.py  browser_file_selectors.py  local_file_selectors.py  sampledata_loader.py
src/: __init__.py  bls_do_treatment.py  bls_metadata.py  bls_spectrum.py  build_deps.py  build_webapp.py  export_webapp.py  index.py  launcher.py  no_jspi.html  run_server.py  s3file_selector.py  test.html  zarr_file.js  zarr_wrapper.js
