[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "BrimView-widgets"
version = "0.0.3"
authors = [
    { name = "Carlo Bevilacqua", email = "carlo.bevilacqua@embl.de" },
    { name = "Sebastian Hambura", email = "sebastian.hambura@embl.de" },
]
description = "Widget to display Brimfile data in a Panel web application"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",

]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/prevedel-lab/BrimView-widgets"
Issues = "https://github.com/prevedel-lab/BrimView-widgets/issues"
